--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "directories": {
     "example": "example"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/landlessness/zetta-honeywell-total-connect-soap-driver.git"
+  },
   "devDependencies": {
   },
   "keywords": [
