--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,6 @@
     "zetta-honeywell-total-connect-automation-driver": "~0.0.3",
     "zetta-honeywell-total-connect-light-driver": "~0.0.3",
     "zetta-honeywell-total-connect-camera-driver": "~0.0.3",
-    "zetta": "~1.0.0-beta.6"
+    "zetta": "~1.1.0"
   }
 }
